nit: fix sonar issues
Signed-off-by: IvanKavaldzhiev <ivankavaldzhiev@gmail.com>